fix: spacing

--- a/src/styles/components/HomeHero.module.scss
+++ b/src/styles/components/HomeHero.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 4rem 0;
+  padding: 4rem 0 5rem;
 }
 .title {
   margin-top: 3.3rem;
